# mylang

./: Makefile.am  NEWS  README  configure.in  gendoc.sh  mylang-1.0.pc.in
mylang/: Makefile.am  byte_stream.h  character_recognizer.cpp  character_recognizer.h  file_byte_stream.cpp  file_byte_stream.h  file_position.h  file_token_stream.cpp  file_token_stream.h  token.h  token_stream.cpp  token_stream.h  unichar_stream.cpp  unichar_stream.h  utf8_unichar_stream.cpp  utf8_unichar_stream.h  util.cpp  util.h
